@@ -176,9 +176,13 @@ Once you have obtained an account ({\em please} follow the
 instructions and introduce yourself when you register: the 
 site administrator has to be sure that you are a real person!)
 you may open your own project, retaining all rights on it 
-(including the right not to release anything). You have the 
-choice between a repository using CVS, SVN, \texttt{git}, 
-plus other choices. You may as well register as a developer 
+(including the right not to release anything): at the end of
+the "projects" page, click on the link "add new project", fill 
+the form (note that the Unix name given to the project cannot
+be modified). You have the choice between a repository using 
+CVS, SVN, \texttt{git}, plus other choices.
+
+You may as well register as a developer 
 in an existing project: go to the project page, click on
 button ''Request to become a developer'' under the ''Activity''
 graph on the top of the column at the right, to obtain the permission 
